--- a/src/my-projects.html
+++ b/src/my-projects.html
@@ -12,6 +12,11 @@
     </style>
 
     <div class="card">
+      <h1>Hand segmentation</h1>
+      <p>I am currently working on a project on pixel-level segmentation of human hands from RGBD images and its applications to robotics. More details soon!</p>
+    </div>
+
+    <div class="card">
       <h1>Rapid PbD</h1>
       <p>
         Based on my interactions with non-expert users who tried our lab's programming by demonstration system, I wrote a new programming by demonstration system called <a href="https://github.com/jstnhuang/rapid_pbd">Rapid PbD</a>.
@@ -47,6 +52,7 @@
       <image-thumbnail src="images/roscon2017.png" href="https://drive.google.com/open?id=0B77PnOCaAq8sVlBtNnV0QlV5cXM" title="My slides on web components from ROSCon 2017."></image-thumbnail>
       <image-thumbnail src="images/ros_rviz.jpg" href="https://www.youtube.com/watch?v=tqXdg5eAw6g" title="A video showing the <ros-rviz> component."></image-thumbnail>
     </div>
+
     <div class="card">
       <h1>Code3</h1>
       <p>
@@ -167,7 +173,7 @@
     </div>
 
     <div class="card">
-      <h1>End-user programming</h1>
+      <h1>Trigger-action programming</h1>
       <p>
         In Winter 2015, I worked on a project investigating trigger-action programming interfaces.
         We worked to characterize the possible confusions people might have in creating and understanding trigger-action rules.
