--- a/src/my-home.html
+++ b/src/my-home.html
@@ -60,9 +60,9 @@
       <h1>About me</h1>
       <p>
         I work on human-robot interaction with my advisor, <a href="http://www.mayacakmak.com/">Maya Cakmak</a> in the <a href="https://hcrlab.cs.washington.edu/">Human-Centered Robotics Lab</a>.
-        My research focuses on making robots practical and easy to program.
-        Specifically, I'm interested in helping people to program mobile manipulators without having to be experts, while also allowing experts to build robot programs rapidly.
-        Simultaneously, I also want to use computer vision and AI to make robots more capable.
+        My research focuses on helping non-experts program mobile manipulators and allowing experts to more rapidly build robot programs.
+        I am also interested in using computer vision and other areas of robotics to make robots more autonomous and capable of more tasks.
+        I enjoy building systems and deploying them on real robots to execute tasks and have experience studying such systems through user research.
       </p>
       <h1>Links</h1>
       <div class="links">
