--- a/src/my-projects.html
+++ b/src/my-projects.html
@@ -88,7 +88,7 @@
       <p>
         <strong>General exam:</strong>
         In November 2016, I passed my general exam!
-        For my <a href="https://drive.google.com/open?id=0B77PnOCaAq8sRktfRnFSek1ET1k">general exam report</a> and presentation, I summarized the ICRA and HRI papers described above.
+        For my <a href="https://drive.google.com/open?id=0B77PnOCaAq8sRktfRnFSek1ET1k">general exam report</a> and presentation, I summarized the IROS and HRI papers described above.
       </p>
       <image-thumbnail src="images/generalexam.png" href="https://drive.google.com/open?id=0B77PnOCaAq8sRktfRnFSek1ET1k" title="My general exam report."></image-thumbnail>
       <image-thumbnail src="images/weboverview.png" href="https://www.youtube.com/watch?v=1tQyxeIwcEs" title="An overview of various infrastructure projects developed in 2016."></image-thumbnail>
