Updated content tag.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <title>Justin Huang</title>
-    <meta name="description" content="Justin Huang's website">
+    <meta name="description" content="Ph.D. Candidate in computer science and robotics at the University of Washington.">
 
     <!--
       If deploying to a non-root path, replace href="/" with the full path to the project root.
