Moved tweenbot link to personal.

--- a/src/my-personal.html
+++ b/src/my-personal.html
@@ -18,6 +18,12 @@
         The next year, I ran the Seattle Half Marathon.
       </p>
       <image-thumbnail src="images/seattle_marathon_2015.jpg" href="images/seattle_marathon_2015.jpg"></image-thumbnail>
+    </div>
+    <div class="card">
+      <h1>Miscellaneous projects</h1>
+      <a href="https://docs.google.com/document/d/1Heg1kZf6PjLZfoy_eR5Ir5s0-YcDdrr4NUjEAj2PMFc/edit?usp=sharing">How to build a tweenbot</a>. We made a lot of these during my undergrad.
+    </div>
+
   </template>
 
   <script>
