--- a/src/my-projects.html
+++ b/src/my-projects.html
@@ -13,7 +13,12 @@
 
     <div class="card">
       <h1>Hand segmentation</h1>
-      <p>I am currently working on a project on pixel-level segmentation of human hands from RGBD images and its applications to robotics. More details soon!</p>
+      <p>
+        I am currently working on a project on pixel-level segmentation of human hands from RGBD images and its applications to robotics.
+        The videos shown below are two examples of the system in action.
+      </p>
+      <image-thumbnail src="images/handseg_1.jpg" href="https://youtu.be/akyuctpOpTI" title="A video showing pixel-level segmentation of hands."></image-thumbnail>
+      <image-thumbnail src="images/handseg_2.jpg" href="https://youtu.be/C-msaVVXzHU" title="A video showing pixel-level segmentation of hands."></image-thumbnail>
     </div>
 
     <div class="card">
@@ -146,6 +151,7 @@
         </ul>
       </p>
       <p>For my computer vision class, I made a <a href="https://docs.google.com/presentation/d/1NZhQ189nF481WVpzGFeko2Knys83eDsmiYhg6d-CaU4/edit?usp=sharing">poster</a> and wrote a <a href="https://drive.google.com/file/d/0B77PnOCaAq8sVmNpTVZfdHBtaDA/view?usp=sharing">short paper</a> about the object recognition pipeline.</p>
+      <image-thumbnail src="images/pr2_pick.jpg" href="https://youtu.be/LyhOCLp2ewU" title="Video of our team testing the PR2 robot for the 2015 Amazon Picking Challenge."></image-thumbnail>
       <image-thumbnail src="images/pick_poster.png" href="https://docs.google.com/presentation/d/1NZhQ189nF481WVpzGFeko2Knys83eDsmiYhg6d-CaU4/edit?usp=sharing"></image-thumbnail>
       <image-thumbnail src="images/pick_paper.png" href="https://drive.google.com/file/d/0B77PnOCaAq8sVmNpTVZfdHBtaDA/view?usp=sharing"></image-thumbnail>
       <image-thumbnail src="images/pick_recog1.png"></image-thumbnail>
