--- a/src/my-software.html
+++ b/src/my-software.html
@@ -14,7 +14,7 @@
     <div class="card">
       <h1>Robot programming systems</h1>
       <p>
-        <strong>rapid_pbd</strong> is a programming by demonstration application for the PR2 and Fetch robots.
+        <strong>rapid_pbd</strong> is a programming by demonstration application for the PR2, Fetch, and Baxter robots.
         <ul>
           <li><a href="https://github.com/jstnhuang/rapid_pbd/wiki">Documentation</a></li>
           <li><a href="https://github.com/jstnhuang/rapid_pbd">GitHub</a></li>
